@@ -16,6 +16,8 @@
     Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
     
     (c) 2006 Mike Lampard, Philip Lawatsch, and others
+
+    $Revision$ -  $Date$ $Author$
     
     This daemon listens on localhost port 15550 for client connections,
     and arbitrates LCD display.  Allows for multiple simultaneous clients.
